<resources>
    <string name="app_name">WisienkaApp</string>

    <string name="title_home">Fight</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_info">Info</string>

    <string name="connect">Connect with robot</string>
    <string name="sensors">Sensors</string>



    <!--activity_main-->
    <string name="main_scan">Scan</string>
    <string name="main_gyro">Gyro calibration</string>
    <string name="main_title">Wisienka</string>
    <string name="main_tactics">Start tactics</string>
    <string name="main_device_not_found">Device not found</string>
    <string name="paired_devices">Paired devices</string>
    <string name="other_devices">Other devices</string>
    <string name="scanning">Scanning</string>
    <string name="none_paired">None devices paired</string>
    <string name="select_device">Select device</string>
    <string name="none_found">None devices found</string>
    <string name="not_connected">Not connected to device</string>
    <string name="test_connection">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="competition">"Fighting"</string>
    <string name="debugging">"Debugging"</string>
    <string name="tuning">"Tuning"</string>

    <!--activity_fight-->
    <string name="fight_start">Start</string>
    <string name="fight_stop">Stop</string>
    <string name="fight_send_data">Send data</string>
    <string name="fight_translation">Set 0 translation</string>
    <string name="fight_delay">Use start delay not module</string>
    <string name="fight_leds">Turn off leds</string>
    <string name="fight_voltage">Lipo voltage:</string>
    <string name="fight_tactics">Set tactic:</string>
    <string name="fight_error">Error:</string>
    <string name="fight_set_translation">Translation:</string>
    <string name="fight_rotation">Rotation:</string>
    <string name="fight_right_motor">Right motor velocity:</string>
    <string name="fight_left_motor">Left motor velocity:</string>
    <string name="fight_sensorssi">SI sensors count:</string>
    <string name="fight_sensorktir">KTIR sensors count:</string>
    <string name="fight_angle">Yaw:</string>
    <string name="fight_acc_x">Acceleration x:</string>
    <string name="fight_acc_y">Acceleration y:</string>
    <string name="fight_acc_z">Acceleration z:</string>

    <!--activity_sensor-->
    <string name="sen_turn_on_motors">Turn on motors</string>
    <string name="sen_turn_off_motors">Turn off motors!</string>
    <string name="sen_show_angle">Show robot angle</string>
    <string name="sen_hide_angle">Hide robot angle</string>
    <string name="sen_show_measurements">Show measurements</string>
    <string name="sen_hide_measurements">Hide measurements</string>
    <string name="unlock">Unlock robot</string>
    <string name="lock">Lock robot</string>
    <string name="rightKtir">Right ktir</string>
    <string name="leftKtir">Left ktir</string>
    <string name="s0">0</string>
    <string name="s1">1</string>
    <string name="s2">2</string>
    <string name="s3">3</string>
    <string name="sa4">4</string>
    <string name="sa5">5</string>
    <string name="sen_starting">Start</string>
    <string name="sen_stop">Stop</string>
    <string name="sen_display">Display</string>
    <string name="sen_fining">Tuning</string>
    <string name="imu">IMU:</string>
    <string name="gyro">Yaw:</string>
    <string name="acc_x">Acc x:</string>
    <string name="acc_y">Acc y:</string>
    <string name="acc_z">Acc z:</string>


    <!--activity_tactic n-->
    <string name="tactic">Choose tactic:</string>
    <string name="direction">Direction:</string>
    <string name="type">Tactic type:</string>
    <string name="turn_vel">Turn movement:</string>
    <string name="drive">Going forward:</string>
    <string name="after">Turn after go</string>
    <string name="time">Drive time:</string>
    <string name="set_tactic">Set tactic</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="turn">Turning</string>
    <string name="angle_turn">Angle turn</string>
    <string name="stop">Turn - stop</string>
    <string name="slow">Slow</string>
    <string name="vslow">Very slow</string>
    <string name="fast">Fast</string>
    <string name="very_fast">Very fast</string>
    <string name="tshort">Short</string>
    <string name="tlong">Long</string>
    <string name="very_long">Very long</string>

    <string name="t_send">Send</string>
    <string name="t_start">Start</string>
    <string name="t_debugging">Debugging</string>
    <string name="t_fetch">Fetch</string>
    <string name="t_sensors">Sensors</string>
    <string name="t_motors">Motors</string>

    <string name="si0">SI 0</string>
    <string name="si1">SI 1</string>
    <string name="si2">SI 2</string>
    <string name="si3">SI 3</string>
    <string name="si4">SI 4</string>
    <string name="si5">SI 5</string>
    <string name="rightkt">Right</string>
    <string name="leftkt">Left</string>
</resources>
