<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_5"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/titleCherry"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/tx_color"
        android:text="@string/tactic"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tvDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="58dp"
        android:text="@string/direction"
        android:textColor="@color/tx_color"
        app:layout_constraintBottom_toTopOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCherry" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="63dp"
        android:textColor="@color/tx_color"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/tvTurn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDirection" />

    <TextView
        android:id="@+id/tvTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="62dp"
        android:text="@string/turn_vel"
        android:textColor="@color/tx_color"
        app:layout_constraintBottom_toTopOf="@+id/tvDrive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="61dp"
        android:text="@string/drive"
        android:textColor="@color/tx_color"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTurn" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="127dp"
        android:text="@string/time"
        android:textColor="@color/tx_color"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartTactics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrive" />

    <Button
        android:id="@+id/buttonStartTactics"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/cherry_custom_button"
        android:color="#000000"
        android:text="@string/set_tactic"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <RadioGroup
        android:id="@+id/rgDirection"
        android:layout_width="180dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="@+id/rgType"
        app:layout_constraintTop_toBottomOf="@+id/tvDirection">

        <RadioButton
            android:id="@+id/rbLeft"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/left"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbRight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/right"
            android:textColor="@color/tx_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="360dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rgTurn"
        app:layout_constraintTop_toBottomOf="@+id/tvType">

        <RadioButton
            android:id="@+id/rbTurn"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/turn"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbAngle"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:paddingTop="0dp"
            android:text="@string/angle_turn"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbStop"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/stop"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbAfter"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/after"
            android:textColor="@color/tx_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgTurn"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rgDrive"
        app:layout_constraintTop_toBottomOf="@+id/tvTurn">

        <RadioButton
            android:id="@+id/rbTurnSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbTurnFast"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/fast"
            android:textColor="@color/tx_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgDrive"
        android:layout_width="360dp"
        android:layout_height="35dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rgTime"
        app:layout_constraintTop_toBottomOf="@+id/tvDrive">

        <RadioButton
            android:id="@+id/rbDriveVSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/vslow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbDriveSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbDriveFast"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/fast"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbDriveVFast"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="@string/very_fast"
            android:textColor="@color/tx_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgTime"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime">

        <RadioButton
            android:id="@+id/rbTimeLongVSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="Long and very slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbTimeShortVSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="Short and very slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbTimeShortSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="Short and slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbTimeLongSlow"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="Long and slow"
            android:textColor="@color/tx_color" />

        <RadioButton
            android:id="@+id/rbTimeShortFast"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/pinkbutton"
            android:text="Short and fast"
            android:textColor="@color/tx_color" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>