<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llVariables"
        app:menu="@menu/navigation" />

    <ToggleButton
        android:id="@+id/buttonStart"
        android:layout_width="127dp"
        android:layout_height="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="115dp"
        android:checked="false"
        android:ellipsize="middle"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textOff="@string/fight_start"
        android:textOn="@string/fight_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/cbTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fight_translation"
        app:layout_constraintStart_toStartOf="@+id/cbDelay"
        app:layout_constraintTop_toBottomOf="@+id/cbDelay" />

    <CheckBox
        android:id="@+id/cbDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="51dp"
        android:text="@string/fight_delay"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbLeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fight_leds"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llVariables"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llVar1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar1"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fight_voltage"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOutVar1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_error" />

            <TextView
                android:id="@+id/tvOutVar2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_set_translation" />

            <TextView
                android:id="@+id/tvOutVar3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_rotation" />

            <TextView
                android:id="@+id/tvOutVar4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fight_right_motor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOutVar5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar6"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fight_left_motor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOutVar6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar7"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_rotation" />

            <TextView
                android:id="@+id/tvOutVar7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar8"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar8"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_rotation" />

            <TextView
                android:id="@+id/tvOutVar8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVar9"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVar9"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/fight_rotation" />

            <TextView
                android:id="@+id/tvOutVar9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>