<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBluetoothDevices"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/buttonStartTactics"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cherry_custom_button"
        android:text="@string/main_tactics"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="595dp" />

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="329dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/linear_backgroud"
        android:fadingEdge="horizontal|vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        tools:visibility="visible">

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_delete"
            android:backgroundTint="@color/white" />

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="424dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/title_connected_devices"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_light_frame"
                app:srcCompat="@mipmap/cherry_logo3_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name: WisienkaApp"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Author: Kornelia Łukojć"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date of release: 2019"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdd"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="53dp"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_menu_info_details"
        android:backgroundTint="@color/pink_4"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="20dp" />

    <LinearLayout
        android:id="@+id/llBluetoothDevices"
        android:layout_width="0dp"
        android:layout_height="502dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/cherry_custom_button"
            android:text="@string/main_scan"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/tvPairedDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired_devices"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvConnectedDevices"
            android:layout_width="match_parent"
            android:layout_height="407dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>